--- a/superset-docker-deploy/nginx/default.conf
+++ b/superset-docker-deploy/nginx/default.conf
@@ -1,26 +1,31 @@
+# Nginx config for Superset (HTTPS + reverse proxy)
+
+# HTTP - Redirect to HTTPS
 server {
-    listen 80;
-    server_name 65.2.5.229;
-    return 301 https://$host$request_uri;
+    listen 80;                             # HTTP port
+    server_name 65.2.5.229;                # Server IP / hostname
+    return 301 https://$host$request_uri;  # Redirect all traffic to HTTPS
 }
 
+# HTTPS - Secure access + proxy to Superset
 server {
-    listen 443 ssl http2;
-    server_name 65.2.5.229;
+    listen 443 ssl http2;                  # HTTPS port with HTTP/2
+    server_name 65.2.5.229;                # Server IP / hostname
 
-    ssl_certificate     /etc/nginx/certs/fullchain.pem;
+    # SSL certificates
+    ssl_certificate /etc/nginx/certs/fullchain.pem;
     ssl_certificate_key /etc/nginx/certs/privkey.pem;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
+    ssl_protocols TLSv1.2 TLSv1.3;         # Modern TLS only
+    ssl_ciphers HIGH:!aNULL:!MD5;          # Strong encryption
 
-    client_max_body_size 50M;
+    client_max_body_size 50M;              # Max upload size
 
+    # Proxy all requests to Superset container
     location / {
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;                       # Original host
+        proxy_set_header X-Real-IP $remote_addr;            # Client IP
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://superset_app:8088;
+        proxy_set_header X-Forwarded-Proto $scheme;         # Protocol info
+        proxy_pass http://superset_app:8088;                # Superset container
     }
 }
-
