--- a/three-tier-app/helm_chart_k8s/templates/backend-deployment.yaml
+++ b/three-tier-app/helm_chart_k8s/templates/backend-deployment.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.backend.enabled }}
+# Backend (Node.js API) Deployment - REST API server with health probes
 apiVersion: apps/v1
 kind: Deployment
 metadata:
