--- a/three-tier-app/helm_chart_k8s/templates/mongodb-pvc.yaml
+++ b/three-tier-app/helm_chart_k8s/templates/mongodb-pvc.yaml
@@ -1,5 +1,6 @@
 {{- if .Values.mongodb.enabled }}
 {{- if .Values.mongodb.persistence.enabled }}
+# MongoDB PersistentVolumeClaim - Storage for MongoDB data
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
