--- a/three-tier-app/helm_chart_k8s/templates/mongodb-service.yaml
+++ b/three-tier-app/helm_chart_k8s/templates/mongodb-service.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.mongodb.enabled }}
+# MongoDB Service - Exposes database on port 27017 (internal only)
 apiVersion: v1
 kind: Service
 metadata:
