--- a/three-tier-app/helm_chart_k8s/templates/backend-service.yaml
+++ b/three-tier-app/helm_chart_k8s/templates/backend-service.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.backend.enabled }}
+# Backend Service - Exposes API internally on port 3500
 apiVersion: v1
 kind: Service
 metadata:
