--- a/three-tier-app/helm_chart_k8s/templates/cluster-autoscaler.yaml
+++ b/three-tier-app/helm_chart_k8s/templates/cluster-autoscaler.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.autoscaler.enabled }}
+# Cluster Autoscaler ServiceAccount - Identity for autoscaler operations
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -9,6 +10,7 @@ metadata:
   name: cluster-autoscaler
   namespace: kube-system
 ---
+# ClusterRole - Permissions to watch/manage nodes and pods
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -17,6 +19,7 @@ metadata:
     k8s-addon: cluster-autoscaler.addons.k8s.io
     k8s-app: cluster-autoscaler
 rules:
+  # Pod eviction and event management
   - apiGroups: [""]
     resources: ["events", "endpoints"]
     verbs: ["create", "patch"]
@@ -26,6 +29,7 @@ rules:
   - apiGroups: [""]
     resources: ["pods/status"]
     verbs: ["update"]
+  # Node discovery and management
   - apiGroups: [""]
     resources: ["endpoints"]
     resourceNames: ["cluster-autoscaler"]
@@ -33,6 +37,7 @@ rules:
   - apiGroups: [""]
     resources: ["nodes"]
     verbs: ["watch", "list", "get", "update"]
+  # Resource monitoring (pods, services, storage)
   - apiGroups: [""]
     resources:
       - "namespaces"
@@ -42,6 +47,7 @@ rules:
       - "persistentvolumeclaims"
       - "persistentvolumes"
     verbs: ["watch", "list", "get"]
+  # Workload resource types
   - apiGroups: ["extensions"]
     resources: ["replicasets", "daemonsets"]
     verbs: ["watch", "list", "get"]
@@ -51,6 +57,7 @@ rules:
   - apiGroups: ["apps"]
     resources: ["statefulsets", "replicasets", "daemonsets"]
     verbs: ["watch", "list", "get"]
+  # Storage and volume management
   - apiGroups: ["storage.k8s.io"]
     resources: ["storageclasses", "csinodes", "csidrivers", "csistoragecapacities", "volumeattachments"]
     verbs: ["watch", "list", "get"]
