--- a/three-tier-app/helm_chart_k8s/templates/frontend-service.yaml
+++ b/three-tier-app/helm_chart_k8s/templates/frontend-service.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.frontend.enabled }}
+# Frontend Service - Exposes frontend internally on port 3000
 apiVersion: v1
 kind: Service
 metadata:
